--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,12 +17,38 @@
   </head>
   <body>
     <header class="header">
+      <nav class="header__nav">
+        <ul class="menu menu--principal">
+          <li class="menu__item">
+            <a class="menu__link active" href="#home">
+              <span class="menu__text">Home</span>
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#projetos">
+              <span class="menu__text">Projetos</span>
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#sobre">
+              <span class="menu__text">Sobre</span>
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#contato">
+              <span class="menu__text">Contato</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
       <div class="header__brand">
         <img class="brand__logo" src="assets/images/logo-ea.png" alt="" />
       </div>
-      <i id="toggleTheme" class="bi bi-sun"></i>
+      <div class="header__toggle">
+        <i id="toggleTheme" class="bi bi-sun"></i>
+      </div>
     </header>
-    <nav>
+    <nav class="nav--mobile">
       <ul class="menu menu--mobile">
         <li class="menu__item">
           <a class="menu__link active" href="#home">
@@ -50,6 +76,15 @@
         </li>
       </ul>
     </nav>
-    <h1>Renan</h1>
+    <main></main>
+
+    <footer>
+      <p>
+        @ 2024. Todos os Direitos Reservados. Renan de Souza. Desenvolvido por
+        <a href="https://github.com/Renan1102">EA</a>
+      </p>
+    </footer>
+
+    <script src="assets/js/scripts.js"></script>
   </body>
 </html>
