--- a/index.html
+++ b/index.html
@@ -76,7 +76,76 @@
         </li>
       </ul>
     </nav>
-    <main></main>
+    <main>
+      <div class="main__content1">
+        <h1><b>Soluções Criativas &</b> Desenvolvimento Full-stack</h1>
+        <p>Renan de Souza, Sertão-RS, Desenvolvedor de Software Full-stack.</p>
+        <ul class="menu menu--social">
+          <li>
+            <a class="menu__link" href=""
+              ><i class="menu__icon bi bi-github"></i
+            ></a>
+          </li>
+          <li>
+            <a class="menu__link" href=""
+              ><i class="menu__icon bi bi-linkedin"></i
+            ></a>
+          </li>
+          <li>
+            <a class="menu__link" href=""
+              ><i class="menu__icon bi bi-instagram"></i
+            ></a>
+          </li>
+        </ul>
+        <button class="btn btn--primary">
+          <span>Ver Projetos</span>
+          <i class="bi bi-arrow-down-right"></i>
+        </button>
+      </div>
+      <div class="main__content2">
+        <iframe
+          src="https://www.youtube.com/embed/HXKz2-Sohfo"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </main>
+
+    <section class="skills">
+      <h2>Conhecimento nas principais tecnologias do mercado</h2>
+      <ul class="skills__list">
+        <li class="skills_item">
+          <img
+            class="skills__logo"
+            src="assets/images/technologies/Angular.svg"
+            alt="Logo Angular"
+          />
+        </li>
+        <li class="skills_item">
+          <img
+            class="skills__logo"
+            src="assets/images/technologies/TypeScript.svg"
+            alt="Logo TypeScript"
+          />
+        </li>
+        <li class="skills_item">
+          <img
+            class="skills__logo"
+            src="assets/images/technologies/Bootstrap.svg"
+            alt="Logo Bootstrap"
+          />
+        </li>
+        <li class="skills_item">
+          <img
+            class="skills__logo"
+            src="assets/images/technologies/SASS.svg"
+            alt="Logo SASS"
+          />
+        </li>
+      </ul>
+    </section>
 
     <footer>
       <p>
