feat: inicio seção Sobre

--- a/index.html
+++ b/index.html
@@ -416,66 +416,46 @@
           </div>
           <div class="row2">
             <h3>Experiências</h3>
-            <h4>Instrutora</h4>
-            <span>Digital Innovation One. Fev 2023 - Atualmente</span>
+            <h4>Responsável por dar manutenção em serviços já existentes, desenvolver novas funcionalidades e elaborar relatórios sobre o progresso das tarefas, etc. Trabalhando com React e Node.js</h4>
+            <span>Taugor Corporation. Out 2024 - Atualmente</span>
             <span>Produção de conteúdos educacionais direcionados a 
               alunos iniciantes que desejam construir uma base no Desenvolvimento Front-end.
             </span>
             <ul class="about__list">
-              <li class="about__item">Elaboração de ementas;</li>
-              <li class="about__item">Ministração de aulas assíncronas;</li>
-              <li class="about__item">Produção de materiais complementares.</li>
+              <li class="about__item">Desenvolvimento e manutenção de páginas web utilizando React e Node Js.;</li>
+              <li class="about__item">Realizar a manutenção e suporte técnico para as aplicações em produção;</li>
+              <li class="about__item">Revisar e melhorar o código existente.</li>
             </ul>
           </div>
         </div>
         <div class="col2">
           <h3>Cursos</h3>
           <div id="accordion">
-            <div class="accordion__item active">
-              <button class="accordion__header start">
-                <span>Versionamento de Código com Git e GitHub</span>
+            <div class="accordion__item">
+              <button class="accordion__header"> <span>Formação programador backend - NodeJS 2024</span>
                 <i class="bi bi-caret-down-fill"></i>
               </button>
               <div class="accordion__body">
-                <p>
-                  Digital Innovation One. Fev 2023. 2h.
-                </p>
-                <p>
-                  O que é versionamento de código, Git e GitHub. Como instalar e configurar o Git em diferentes sistemas 
-                  operacionais e como autenticar via Token e SSH. Como manusear repositórios, indo desde a criação e clonagem 
-                  até o gerenciamento de branches, passando por todas as etapas de salvar, desfazer e sincronizar alterações 
-                  com o repositório remoto. 
-                </p>
+                <p>Udemy. Jun 2024. 14.5h.</p>
               </div>
             </div>
             <div class="accordion__item">
-              <button class="accordion__header">
-                <span>Contribuindo em um Projeto Open Source no GitHub</span>
+              <button class="accordion__header"> <span>Programação em Python do básico ao avançado</span>
                 <i class="bi bi-caret-down-fill"></i>
               </button>
               <div class="accordion__body">
-                <p>
-                  Digital Innovation One. Fev 2023. 1h.
-                </p>
-                <p>
-                  Lab prático sobre colaboração em projetos de código aberto.
-                </p>
+                <p>Geek University. Mai 2023. 63.5h.</p>
               </div>
             </div>
             <div class="accordion__item">
-              <button class="accordion__header end">
-                <span>Organizando seus Estudos com os Roadmaps DIO e o Notion</span>
+              <button class="accordion__header"> <span>Versionamento de Código com Git e GitHub</span>
                 <i class="bi bi-caret-down-fill"></i>
               </button>
-              <div class="accordion__body end">
-                <p>
-                  Digital Innovation One. Fev 2023. 2h.
-                </p>
-                <p>
-                  Otimização dos estudos com os Roadmaps DIO, construindo um caderno de estudos com a ferramenta Notion.
-                </p>
+              <div class="accordion__body">
+                <p>Digital Innovation One. Set 2024. 2h.</p>
               </div>
             </div>
+          </div>
           </div>
     </section>
 
