feat: seção sobre finalizada

--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
         <div class="col2">
           <h3>Cursos</h3>
           <div id="accordion">
-            <div class="accordion__item">
-              <button class="accordion__header"> <span>Formação programador backend - NodeJS 2024</span>
+            <div class="accordion__item active">
+              <button class="accordion__header start"> <span>Formação programador backend - NodeJS 2024</span>
                 <i class="bi bi-caret-down-fill"></i>
               </button>
               <div class="accordion__body">
@@ -448,10 +448,10 @@
               </div>
             </div>
             <div class="accordion__item">
-              <button class="accordion__header"> <span>Versionamento de Código com Git e GitHub</span>
+              <button class="accordion__header end"> <span>Versionamento de Código com Git e GitHub</span>
                 <i class="bi bi-caret-down-fill"></i>
               </button>
-              <div class="accordion__body">
+              <div class="accordion__body end">
                 <p>Digital Innovation One. Set 2024. 2h.</p>
               </div>
             </div>
