feat: add seção Sobre e Finalizando

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
         <p>Renan de Souza, Sertão-RS, Desenvolvedor de Software Full-stack.</p>
         <ul class="menu menu--social">
           <li>
-            <a class="menu__link" href=""
+            <a class="menu__link" href="https://github.com/Renan1102"
               ><i class="menu__icon bi bi-github"></i
             ></a>
           </li>
           <li>
-            <a class="menu__link" href=""
+            <a class="menu__link" href="https://www.linkedin.com/in/renan-de-souza-795b22195/"
               ><i class="menu__icon bi bi-linkedin"></i
             ></a>
           </li>
@@ -121,28 +121,35 @@
         <li class="technologies_item">
           <img
             class="technologies__logo"
-            src="assets/images/technologies/Angular.svg"
+            src="assets/images/technologies/react-brands-solid (1).svg"
             alt="Logo Angular"
           />
         </li>
         <li class="technologies_item">
           <img
             class="technologies__logo"
-            src="assets/images/technologies/TypeScript.svg"
+            src="assets/images/technologies/css3-alt-brands-solid.svg"
             alt="Logo TypeScript"
           />
         </li>
         <li class="technologies_item">
           <img
             class="technologies__logo"
-            src="assets/images/technologies/Bootstrap.svg"
+            src="assets/images/technologies/js-brands-solid.svg"
             alt="Logo Bootstrap"
           />
         </li>
         <li class="technologies_item">
           <img
             class="technologies__logo"
-            src="assets/images/technologies/SASS.svg"
+            src="assets/images/technologies/python-brands-solid.svg"
+            alt="Logo SASS"
+          />
+        </li>
+        <li class="technologies_item">
+          <img
+            class="technologies__logo"
+            src="assets/images/technologies/java-brands-solid.svg"
             alt="Logo SASS"
           />
         </li>
@@ -172,28 +179,28 @@
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/Angular.svg"
+                  src="assets/images/technologies/react-brands-solid (1).svg"
                   alt="Logo Angular"
                 />
               </li>
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/TypeScript.svg"
+                  src="assets/images/technologies/next-js.svg"
                   alt="Logo TypeScript"
                 />
               </li>
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/Bootstrap.svg"
+                  src="assets/images/technologies/css3-alt-brands-solid.svg"
                   alt="Logo Bootstrap"
                 />
               </li>
               <li class="technologies_item">
                 <img
-                  class="technologies__logo"
-                  src="assets/images/technologies/SASS.svg"
+                  class="technologies__logo colorido"
+                  src="assets/images/technologies/mong.svg"
                   alt="Logo SASS"
                 />
               </li>
@@ -223,7 +230,7 @@
         <div class="projects__card card--reverse">
           <img
             class="card__cover"
-            src="assets/images/projects/gerenFunc.png"
+            src="assets/images/projects/FuncLog.png"
             alt="Screen Renan`s Box"
           />
           <div class="card__body">
@@ -246,28 +253,35 @@
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/Angular.svg"
+                  src="assets/images/technologies/react-brands-solid (1).svg"
                   alt="Logo Angular"
                 />
               </li>
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/TypeScript.svg"
+                  src="assets/images/technologies/css3-alt-brands-solid.svg"
                   alt="Logo TypeScript"
                 />
               </li>
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/Bootstrap.svg"
+                  src="assets/images/technologies/html5-brands-solid.svg"
                   alt="Logo Bootstrap"
                 />
               </li>
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/SASS.svg"
+                  src="assets/images/technologies/js-brands-solid.svg"
+                  alt="Logo SASS"
+                />
+              </li>
+              <li class="technologies_item">
+                <img
+                  class="technologies__logo"
+                  src="assets/images/technologies/firebase.svg"
                   alt="Logo SASS"
                 />
               </li>
@@ -314,31 +328,25 @@
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/Angular.svg"
+                  src="assets/images/technologies/html5-brands-solid.svg"
                   alt="Logo Angular"
                 />
               </li>
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/TypeScript.svg"
+                  src="assets/images/technologies/css3-alt-brands-solid.svg"
                   alt="Logo TypeScript"
                 />
               </li>
               <li class="technologies_item">
                 <img
                   class="technologies__logo"
-                  src="assets/images/technologies/Bootstrap.svg"
+                  src="assets/images/technologies/js-brands-solid.svg"
                   alt="Logo Bootstrap"
                 />
               </li>
-              <li class="technologies_item">
-                <img
-                  class="technologies__logo"
-                  src="assets/images/technologies/SASS.svg"
-                  alt="Logo SASS"
-                />
-              </li>
+              
             </ul>
             <div class="card__buttons">
               <a
@@ -457,6 +465,38 @@
             </div>
           </div>
           </div>
+    </section>
+
+    <section id="contato" class="contact">
+      <h2>Contate-me</h2>
+      <p>Estou disponível para serviços e novas conexões. Contate-me via 
+        e-mail e conecte-se comigo através das minhas redes sociais.
+      </p>
+      <ul class="menu menu--social">
+        <li>
+          <a class="menu__link" href="https://github.com/Renan1102" target="_blank">
+            <i class="menu__icon bi bi-github"></i>
+            <span>GitHub</span>
+          </a>
+        </li>
+        <li>
+          <a class="menu__link" href="https://www.linkedin.com/in/renan-de-souza-795b22195/" target="_blank">
+            <i class="menu__icon bi bi-linkedin"></i>
+            <span>LinkedIn</span>
+          </a>
+        </li>
+        <li>
+          <a class="menu__link" href="" target="_blank">
+            <i class="menu__icon bi bi-instagram"></i>
+            <span>Instagram</span>
+          </a>
+        </li>
+      </ul>
+      <a href="mailto:renandesouza1102@gmail.com">
+        <button class="btn btn--primary">
+          <span class="email">renandesouza1102@gmail.com</span>
+        </button>  
+      </a>
     </section>
 
     <footer>
