--- a/index.html
+++ b/index.html
@@ -105,13 +105,14 @@
         </a>
       </div>
       <div class="main__content2">
-        <iframe
+        <!-- <iframe
           src="https://www.youtube.com/embed/HXKz2-Sohfo"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
-        ></iframe>
+        ></iframe> -->
+        <img src="assets/images/full-stack-web-development.jpg" alt="Imagem de destaque">
       </div>
     </main>
 
@@ -424,10 +425,9 @@
           </div>
           <div class="row2">
             <h3>Experiências</h3>
-            <h4>Responsável por dar manutenção em serviços já existentes, desenvolver novas funcionalidades e elaborar relatórios sobre o progresso das tarefas, etc. Trabalhando com React e Node.js</h4>
+            <h4>Desenvolvedor Júnior I</h4>
             <span>Taugor Corporation. Out 2024 - Atualmente</span>
-            <span>Produção de conteúdos educacionais direcionados a 
-              alunos iniciantes que desejam construir uma base no Desenvolvimento Front-end.
+            <span>Desenvolvedor de software Full stack, com foco no desenvolvimento e manutenção de aplicações em React e Node.
             </span>
             <ul class="about__list">
               <li class="about__item">Desenvolvimento e manutenção de páginas web utilizando React e Node Js.;</li>
